Wrote some more

--- a/_main.Rmd
+++ b/_main.Rmd
@@ -211,21 +211,21 @@ knitr::include_graphics("./figures/si427.jpg")
 
 For a long time, coordinate systems remained tied to geography and maps, however, with the arrival of the early modern age, this was about to change. In the 16th and 17th centuries, the works of the 9th century algebraist Al-Khwarizmi percolated into Europe, and with them the idea of representing unknown quantities by variables [@kvasz2006]. This idea culminated with Descartes, who introduced the concept of visualizing algebraic relationships as objects in a 2D plane, forging a powerful link between Euclidean geometry and algebra [@friendly2021]. Coordinate systems were thus freed of their connection to geography, and the x- and y-axes of a graph could now be used to represent an arbitrary "space" spanned by two variables.
 
-Descartes' invention of representing abstract relationships as objects in a 2D plane was initially only used to plot mathematical functions. However, it did not take long for people realize that observations real-world observations could be visualized this way as well. A true pioneer in this arena was William Playfair, who popularized visualization as a way of presenting socioeconomic data and invented many types of plots still in use today, such as the barplot, lineplot, and pie chart [@friendly2021]. The collection of data and *statistics* ["things of the state", @etymonline2024] accelerated with the emergence of the early modern nation states, leading to a "golden age" of statistical graphics [@beniger1978; @friendly2021; @young2011]. This period saw the emergence of many other graphical lumnaries, including Étienne-Jules Marey and Charles Joseph Minard [@friendly2021], as well as some ingenious examples of the use of statistical graphics to solve real-world problems, such as John Snow's investigation into the London cholera outbreak [@freedman1999; @friendly2021] and Florence Nightingale's reporting on the unsanitary treatment of wounded British soldiers during the Crimean War [@brasseur2005], both of which lead to a great reduction of preventable deaths. 
+Descartes' invention of representing abstract relationships as objects in a 2D plane was initially only used to plot mathematical functions. However, it did not take long for visualizations of real-world observations to appear. A true pioneer in this arena was William Playfair, who popularized visualization as a method of presenting socioeconomic data and invented many types of plots we still use today, such as barplots, lineplots, and pie charts [@friendly2021]. The collection of data and *statistics* ["things of the state", @etymonline2024] was further accelerated by the emergence of the modern nation states in the 19th century, leading to a "golden age" of statistical graphics [@beniger1978; @friendly2021; @young2011]. This period saw the emergence of many other visualization lumnaries, including Étienne-Jules Marey and Charles Joseph Minard [@friendly2021], as well as some ingenious examples of the use of statistical graphics for solving real-world problems, such as John Snow's investigation into the London cholera outbreak [@freedman1999; @friendly2021] and Florence Nightingale's reporting on the unsanitary treatment of wounded British soldiers during the Crimean War [@brasseur2005], both of which lead to the prevention of unnecessary loss of life. 
 
 Simultaneously, significant developments were also taking place in the field of mathematical statistics. Building upon the foundation laid by mathematical prodigies such as Jakob Bernoulli, Abraham de Moivre, Pierre Simon Laplace, and Carl Friedrich Gauss, early 19th century statistical pioneers such as Adolph Quetelet and Francis Galton began developing statistical techniques for uncovering hidden trends in the newly unearthed treasure trove of socioeconomic data [@fienberg1992; @freedman1999]. In the late 19th and early 20th century, these initial efforts were greatly advanced by the theoretical work of figures such as Karl Pearson, Ronald A. Fisher, Jerzy Neyman, and Harold Jeffreys, who established statistics as a discipline in its own right and facilitated its dissemination throughout many scientific fields [@fienberg1992].
 
-As mathematical statistics gained prominence in the early 20th century, data visualization declined. Perceived as less rigorous than "serious" statistical analysis, it got relegated to an auxiliary position, ushering in "dark age" of statistical graphics [@friendly2006; @young2011]. This development may have been partly driven by the early frequentist statisticians' aspiration to establish statistics as a foundation for determining objective truths about the world and society, motivated by personal socio-political goals [see @clayton2021]. Be it as it may, while statistical graphics also did get popularized and entered the mainstream during this time, only a few interesting developments took place [@friendly2021].      
+Interestingly, as mathematical statistics gained prominence in the early 20th century, data visualization declined. Perceived as less rigorous than "serious" statistical analysis, it was relegated to an auxiliary position, ushering in "the dark age of statistical graphics" [@friendly2006; @young2011]. This shift may have been partly driven by the early frequentist statisticians' aspiration to establish statistics as a foundation for determining objective truths about the world and society, motivated by personal socio-political goals [see @clayton2021]. Be it as it may, while statistical graphics did achieve mainstream popularity during this period, relatively few significant developments occurred [@friendly2021].      
 
-However, beginning in the late 1950's, a series of developments took place which would restore the prominence of data visualization and make it more widely accessible than ever. Firstly, on the theoretical front, the work of certain academic heavy-weights greatly elevated data visualization and its prestige. Particularly, John Tukey [-@tukey1962; -@tukey1977] fervently championed exploratory data analysis and placed data visualization in its centre. Around the same time, Jacques Bertin published his famous *Sémiologie graphique* [-@bertin1967], which was one of the first works to attempt to lay out a comprehensive system of visual encodings and scales. Secondly, at the more applied level, the development of the personal computer [see e.g. @abbate1999] and high-level programming languages such as FORTRAN in 1954 [@backus1978], made the process of rendering production-grade figures easier and more accessible than ever before. Combined, these developments fueled a surge in the use and dissemination of data visualizations.  
+However, beginning in the late 1950's, a series of key developments restored the prominence of data visualization and made it more widely accessible than ever. First, on the theoretical front, the work of certain academic heavy-weights greatly elevated its prestige. Particularly, John Tukey [-@tukey1962; -@tukey1977] fervently championed exploratory data analysis and placed data visualization at its centre. Around the same time, Jacques Bertin published his seminal *Sémiologie graphique* [-@bertin1967], one of the first works to attempt to provide a comprehensive model of data visualization, featuring now-familiar concepts like visual encodings and scales. Second, at the more applied level, the development of the personal computer [see e.g. @abbate1999] and high-level programming languages such as FORTRAN in 1954 [@backus1978], made rendering production-grade figures easier and more accessible than ever before. Combined, these developments fueled a surge in the use and dissemination of data visualization.  
 
-As the millennium drew to a close, the theoretical foundations of static data visualization were solidified by a number of other academics. First, significant contributions were made by William Cleveland, who laid out important principles for scientific data visualization many of which are taken for granted today [@cleveland1985; @cleveland1993]. Of note, his seminal study on the impact of the choice of visual encodings on statistical judgements remains widely cited today [@cleveland1984]. Similarly, Edward Tufte introduced essential principles for the effective visualization design, coining terms such as *chartjunk* and *data-to-ink ratio* [@tufte2001]. Finally, Leland Wilkinson's groundbreaking Grammar of Graphics [-@wilkinson2012] introduced a comprehensive system for designing charts based on simple algebraic rules, influencing nearly every subsequent software package and research endeavor in the field of visualization.
+As the millennium drew to a close, the theoretical foundations of static data visualization were further solidified by a number of other academic luminaries. First, William Cleveland made significant contributions, laying out important principles for scientific data visualization, many of which are taken for granted today [@cleveland1985; @cleveland1993]. Particularly, his seminal study on the impact of visual encodings on statistical judgements remains one of the most widely cited papers in data visualization literature to this day [@cleveland1984]. Similarly, Edward Tufte introduced many essential principles for the effective visualization design, coining terms such as *chartjunk* and *data-to-ink ratio* [@tufte2001]. Finally, Leland Wilkinson's groundbreaking Grammar of Graphics [-@wilkinson2012] introduced a comprehensive system for designing charts based on simple algebraic rules. It is likely not an overstatement to say that this system has influenced nearly every research paper and software package in the field of data visualization since its publication.
 
 ### Early interactive data visualization: By statisticians for statisticians {#early-interactive}
 
-Compared to static data visualization, interactive data visualization is a far more recent development. Consequently, less information is available about its history. In the short time period since its inception, software has evolved rapidly, and, furthermore, much of it has been under proprietary licenses, confounding detailed historical analyses. Nevertheless, the available information still offers some interesting insights.
+Compared to static data visualization, interactive data visualization is a much more recent development. Consequently, less concrete information is available about its history. In the short time period since its inception, software has evolved rapidly, and, furthermore, much of it under proprietary licenses, which complicates detailed historical analyses. Nevertheless, the available information still offers many interesting insights.
 
-After the computer-driven revolution of static data visualization in the 1950's (described in Section \@ref(static-visualization)), interactive data visualization would not be left far behind. The very early interactive tools tended to be developed for niche, specialized tasks. For instance, @fowlkes1969 designed a system which allowed the users to view probability distributions under different configurations of parameters and transformations, and @kruskal1964 created a tool for visualizing multidimensional scaling. 
+Following the computer-driven revolution of static data visualization during the 1950's (described in Section \@ref(static-visualization)), interactive data visualization quickly began to emerge. Early interactive systems were typically developed for highly specialized tasks. For instance, @fowlkes1969 designed a system which allowed the users to view probability distributions under varying parameter configurations and transformations, while @kruskal1964 created a tool for visualizing multidimensional scaling. 
 
 (ref:fisherkeller) [right, @fisherkeller1974]
 
@@ -237,7 +237,7 @@ After the computer-driven revolution of static data visualization in the 1950's 
 knitr::include_graphics("./figures/prim9.png")
 ```
 
-However, researchers soon recognized the potential of interactive data visualization as a general-purpose tool for data exploration. The first example of such general-purpose system was PRIM-9 [@fisherkeller1974]. PRIM-9 allowed for exploration of multivariate data via interactive features such as projection, rotation, masking, and filtering. Following the success of PRIM-9, the late 1980's saw the emergence of a new generation of tools which provided an even wider range of functionalities. Systems like MacSpin [@donoho1988], Data Desk [@velleman1989], XLISP-STAT [@tierney1990], and XGobi [@swayne1998] introduced features such as interactive scaling, rotation, linked views, and grand tours (for a glimpse into the history, an excellent series of video-documentaries is available at [ASA Statistical Graphics Video Library](https://community.amstat.org/jointscsg-section/media/videos)).
+However, researchers soon recognized the potential of interactive data visualization as a general-purpose tool for data exploration. The first example of such general-purpose system was PRIM-9 [@fisherkeller1974]. PRIM-9 allowed for exploration of multivariate data via interactive features such as projection, rotation, masking, and filtering. Following the success of PRIM-9, the late 1980's saw the emergence of a new generation of tools which provided an even wider range of functionalities. Systems like MacSpin [@donoho1988], Data Desk [@velleman1989], XLISP-STAT [@tierney1990], and XGobi [@swayne1998] introduced features such as interactive scaling, rotation, generalized linked views, and grand tours (for a glimpse into the history, an excellent series of video-documentaries is available at [ASA Statistical Graphics Video Library](https://community.amstat.org/jointscsg-section/media/videos)).
 
 (ref:tierney) [figure reproduced from @tierney1990]
 
@@ -250,7 +250,7 @@ knitr::include_graphics("./figures/xlisp-stat.png")
 
 #### Open-source Statistical Computing
 
-The proliferation of open-source general-purpose statistical computing software such as S and R further democratized the access to interactive data visualization [see also @leeuw2004]. Building on XGobi's foundation, GGobi [@swayne2003], expanded upon on XGobi and provided an integration layer for R. Other tools like MANET [@unwin1996] and Mondrian [@theus2002] introduced sophisticated features such as selection sequences, allowing the users to combine a series of linked selections via logical operators [see also @unwin2006]. Further, iPlots [@urbanek2003] implemented a general framework for interactive plotting in R, allowing not only for one-shot rendering of interactive figures but also direct programmatic manipulation from R. This package was later expanded expanded for big data capabilities in iPlots eXtreme [@urbanek2011]. Finally, the `cranvas` package [@xie2014] introduced a set of reactive programming primitives that could be used for building the infrastructure underlying interactive graphics directly in R, within the model-view-controller (MVC) framework.   
+The proliferation of open-source general-purpose statistical computing software such as S and R further democratized the access to interactive graphics [see also @leeuw2004]. Building on XGobi's foundation, GGobi [@swayne2003], expanded upon on XGobi and provided an integration layer for R. Other tools like MANET [@unwin1996] and Mondrian [@theus2002] introduced manz sophisticated features, such as selection sequences, which allowed the users to combine a series of linked selections via logical operators [see also @unwin2006]. Further, iPlots [@urbanek2003] implemented a general framework for interactive plotting in R, allowing not only for one-shot rendering of interactive figures but also live programmatic manipulation via client-server architecture. This package was later expanded expanded for big data capabilities in iPlots eXtreme [@urbanek2011]. Finally, the `cranvas` package [@xie2014] introduced a set of reactive programming primitives that could be used for building the infrastructure underlying interactive graphics directly in R, within the model-view-controller (MVC) framework.   
 
 (ref:theus) [@theus2002]
 
