--- a/litreview.Rmd
+++ b/litreview.Rmd
@@ -74,7 +74,7 @@ Following the computer-driven revolution of static data visualization during the
 knitr::include_graphics("./figures/prim9.png")
 ```
 
-However, researchers soon recognized the potential of interactive data visualization as a general-purpose tool for data exploration. The first example of such general-purpose system was PRIM-9 [@fisherkeller1974]. PRIM-9 allowed for exploration of multivariate data via interactive features such as projection, rotation, masking, and filtering. Following the success of PRIM-9, the late 1980's saw the emergence of a new generation of tools which provided an even wider range of functionalities. Systems like MacSpin [@donoho1988], Data Desk [@velleman1989], XLISP-STAT [@tierney1990], and XGobi [@swayne1998] introduced features such as interactive scaling, rotation, linked views, and grand tours (for a glimpse into the history, an excellent series of video-documentaries is available at [ASA Statistical Graphics Video Library](https://community.amstat.org/jointscsg-section/media/videos)).
+However, researchers soon recognized the potential of interactive data visualization as a general-purpose tool for data exploration. The first example of such general-purpose system was PRIM-9 [@fisherkeller1974]. PRIM-9 allowed for exploration of multivariate data via interactive features such as projection, rotation, masking, and filtering. Following the success of PRIM-9, the late 1980's saw the emergence of a new generation of tools which provided an even wider range of functionalities. Systems like MacSpin [@donoho1988], Data Desk [@velleman1989], XLISP-STAT [@tierney1990], and XGobi [@swayne1998] introduced features such as interactive scaling, rotation, generalized linked views, and grand tours (for a glimpse into the history, an excellent series of video-documentaries is available at [ASA Statistical Graphics Video Library](https://community.amstat.org/jointscsg-section/media/videos)).
 
 (ref:tierney) [figure reproduced from @tierney1990]
 
@@ -87,7 +87,7 @@ knitr::include_graphics("./figures/xlisp-stat.png")
 
 #### Open-source Statistical Computing
 
-The proliferation of open-source general-purpose statistical computing software such as S and R further democratized the access to interactive data visualization [see also @leeuw2004]. Building on XGobi's foundation, GGobi [@swayne2003], expanded upon on XGobi and provided an integration layer for R. Other tools like MANET [@unwin1996] and Mondrian [@theus2002] introduced sophisticated features such as selection sequences, allowing the users to combine a series of linked selections via logical operators [see also @unwin2006]. Further, iPlots [@urbanek2003] implemented a general framework for interactive plotting in R, allowing not only for one-shot rendering of interactive figures but also direct programmatic manipulation from R. This package was later expanded expanded for big data capabilities in iPlots eXtreme [@urbanek2011]. Finally, the `cranvas` package [@xie2014] introduced a set of reactive programming primitives that could be used for building the infrastructure underlying interactive graphics directly in R, within the model-view-controller (MVC) framework.   
+The proliferation of open-source general-purpose statistical computing software such as S and R further democratized the access to interactive graphics [see also @leeuw2004]. Building on XGobi's foundation, GGobi [@swayne2003], expanded upon on XGobi and provided an integration layer for R. Other tools like MANET [@unwin1996] and Mondrian [@theus2002] introduced many sophisticated features, such as selection sequences, which allowed the users to combine a series of linked selections via logical operators [see also @unwin2006]. Further, iPlots [@urbanek2003] implemented a general framework for interactive plotting in R, allowing not only for one-shot rendering of interactive figures but also live programmatic manipulation via client-server architecture. This package was later expanded expanded for big data capabilities in iPlots eXtreme [@urbanek2011]. Finally, the `cranvas` package [@xie2014] introduced a set of reactive programming primitives that could be used for building the infrastructure underlying interactive graphics directly in R, within the model-view-controller (MVC) framework.   
 
 (ref:theus) [@theus2002]
 
@@ -98,25 +98,24 @@ The proliferation of open-source general-purpose statistical computing software 
 knitr::include_graphics("./figures/mondrian.png")
 ```
 
-Alongside the more general interactive data visualization frameworks discussed above, there were also many other specialized packages developed. These tended to be designed around specific statistical techniques and models. For instance, `KLIMT` was developed for interactive visualization of classification and regression trees [@urbanek2001; @urbanek2002]. Similarly, packages like `tourr` [@wickham2011], `spinifex` [@spyrison2020], `liminal` [@lee2021; @lee2022a] provided tools for exploring large multivariate data sets via grand tour projections [see @cook1995]. 
+Alongside the more general interactive data visualization frameworks discussed above, there were also many other more specialized packages which tended to be designed around specific statistical techniques and models. For instance, `KLIMT` was developed for interactive visualization of classification and regression trees [@urbanek2001; @urbanek2002]. Similarly, packages like `tourr` [@wickham2011], `spinifex` [@spyrison2020], `liminal` [@lee2021; @lee2022a] provided tools for exploring large multivariate data sets via grand tour projections [see @cook1995]. 
 
-There is also one relatively recent milestone in the history of interactive visualization in R which is important to discuss: Shiny [@shiny2024; see also @sievert2020; @wickham2021]. Shiny is general framework for developing interactive web apps in R, which relies a client-server MVC-like architecture, whereby the user defines an R-based server and a web-based UI/controller layer (which is scaffolded in R, but transpiled to HTML, CSS, and JavaScript). Communication between the client and the server is bidirectional and handled via WebSockets [@mdn2024g; facilitated through the `httpuv` package @cheng2024]. The primary advantage of Shiny is that it gives less technical R users the ability to easily create rich interactive web apps, including interactive data visualizations (by re-rendering static plots). The one major downside of Shiny is that, since every interactive event has to do a round-trip from the client to the R server and back again, high-frequency interactions (such as brushing scatterplot points) can become prohibitively slow, particularly at larger data volumes [although there are ways to mitigate this, @sievert2020].   
-
-Finally, it is important to mention that, over time, there seems to have been a trend towards more of the specialized tools within the R community, and fewer of the general, high-level frameworks [although there are some notable exceptions, such as the `loon` package, @waddell2023]. Currently, it seems that R users typically encounter interactive visualizations in the context of Shiny [@shiny2024] dashboards, or through R wrappers of interactive data visualization libraries ported over from the JavaScript ecosystem (see Section \@ref(web-based)).
+Beyond just graphs, another important milestone for interactive visualization in R is Shiny [@shiny2024; see also @sievert2020; @wickham2021], a general framework for developing interactive web apps in R. Shiny relies a client-server MVC architecture, such that the user defines an R-based server and a web-based UI/controller layer (which is templated in R and transpiled to HTML, CSS, and JavaScript). Communication between the client and the server is handled via WebSockets [@mdn2024g; facilitated through the `httpuv` package @cheng2024]. A major advantage of Shiny is that it gives less technical R users the ability to easily create rich interactive web apps, including interactive data visualizations (by re-rendering static plots). However, one major downside is that, since every interactive event has to do a round-trip between the client and the R server, high-frequency interactions (such as brushing scatterplot points) can become prohibitively slow, particularly at larger data volumes [although there are ways to mitigate this, @sievert2020].   
+Finally, over time, the R community seems to have gravitated towards developing more specialized interactive visualization tools, with fewer general, high-level frameworks emerging [although there are some notable exceptions, such as the `loon` package, @waddell2023]. Currently, it seems that R users typically encounter interactive visualizations in the context of Shiny [@shiny2024] dashboards, or through R wrappers of interactive data visualization libraries ported over from the JavaScript ecosystem (which will be discussed in Section \@ref(web-based)).
 
 #### Common features and limitations of early interactive systems
 
-A common thread among the early interactive data visualization systems is that they were designed by statisticians with primary focus on data exploration. High-level analytic features such as linked views, rotation/projection, and interactive manipulation of model parameters made frequent appearance. While these features were powerful, they also contributed to a steeper learning curve, potentially limiting adoption by users without a strong data analytic background. Furthermore, many of these early tools were typically standalone applications, with only later packages like GGobi and iplots offering integration with other data analysis software and languages. Finally, they often offered only limited customization options and this made them less suitable for data presentation.
+A common thread among the early interactive data visualization systems is that they were designed by applied statisticians. As such, the primary focus was data exploration. High-level analytic features such as linked views, rotation/projection, and interactive manipulation of model parameters made frequent appearance. While these features were powerful, they also contributed to a steeper learning curve, potentially limiting adoption. Furthermore, many of the early tools were standalone applications, with only later packages such as GGobi and iPlots offering integration with existing data analysis software and languages. Finally, they often offered only limited customization options and this may have made them less suitable for data presentation.
 
 ### Interactive data visualization and the internet: Web-based interactivity {#web-based}
 
-The end of the millennium marked the arrival of a new class of technologies which impacted interactive data visualization just as much as almost every other field of human endeavor. The rise of the internet in the mid 1990's made it possible to create interactive applications that could be accessed by anyone, from anywhere. This was aided by the dissemination of robust and standardized web browsers, as well as the development of JavaScript as a high-level programming language for the web  [for a tour of the language's history, see e.g. @wirfs-brock2020]. Soon, interactive visualizations became just one of many emerging technologies within the burgeoning web ecosystem. 
+The end of the millennium marked the arrival of a new class of technologies that profoundly impacted interactive data visualization, much like almost every other field of human endeavor. The rise of the internet in the mid 1990's made it possible to create interactive applications that could be accessed by anyone, from anywhere. This was accelerated by the adoption of standardized web browsers and the development of JavaScript, a high-level programming language for the web  [for a tour of the language's history, see e.g. @wirfs-brock2020]. Soon, interactive visualizations became one of many emerging technologies within the burgeoning web ecosystem. 
 
-Early web-based interactive data visualization systems tended to rely on external plugins. Examples of these include Prefuse [@heer2005] and Flare [developed around 2008, @flare2020], which leveraged the Java runtime and Adobe Flash Player, respectively. However, as browser technologies advanced, particularly as JavaScript's performance improved thanks to advances in just-in-time compilation [JIT, see e.g. @clark2017; @dao2020], it became possible to create complex interactive experiences directly in the browser. This led to the emergence of several popular web-native interactive data visualization systems in the early 2010s, many of which remain widely used today. 
+Early web-based interactive data visualization systems tended to rely on external plugins. Examples of these include Prefuse [@heer2005] and Flare [developed around 2008, @flare2020], which leveraged the Java runtime and Adobe Flash Player, respectively. However, as browser technologies advanced, particularly as JavaScript's performance improved thanks to technological advances such as just-in-time compilation [JIT, see e.g. @clark2017; @dao2020], it became possible to create complex interactive experiences directly in the browser. In the early 2010s, his led to the emergence of several popular web-native interactive data visualization systems, many of which remain in popular use to this day. 
 
 #### D3
 
-D3.js [@bostock2022] is one of the earliest and most influential web-based visualization systems. As a general, low-level framework for visualizing data, D3 provides of a suite of specialized JavaScript modules for various aspects of the data visualization workflow, including data parsing, transformation, scaling, and DOM interaction. 
+D3.js [@bostock2022] is one of the earliest and most influential web visualization frameworks. It can be best described as a suite of specialized JavaScript modules that handle various aspects of the data visualization workflow, including data parsing, transformation, scaling, and DOM interaction. Being a relatively low-level tool, D3 requires users to manually specify many details when creating plots.
 
 For instance, here's how to create a basic scatterplot in D3:
 
@@ -176,9 +175,7 @@ svg
 knitr::include_graphics("./figures/d3-scatterplot.png")
 ```
 
-As you can see from Figure \@ref(fig:d3-scatterplot) and the corresponding code, D3 is a fairly low-level framework. Compared to typical high-level plotting functionalities such as those provided by base R or `ggplot2` [@r2024; @wickham2016], the user has to handle many low-level details such as scaling and appending of primitives explicitly. This is also the case with interaction. While D3 does provide some methods for handling reactive DOM events, it does not itself provide a system for dispatching and coordinating these events - instead, it delegates this responsibility to the user, and encourages the use of reactive Web frameworks such as React [@react2024], Vue [@vue2024], or Svelte [@svelte2024]. 
-
-Finally, D3.js visualizations are rendered as Scalable Vector Graphics (SVG) by default. This ensures lossless scaling but may impact rendering performance at high data volumes. While various unofficial alternative rendering engines based on the HTML 5 Canvas element or WebGL, do exist, there are no official libraries with such functionalities as of this date.
+As seen in the code for Figure \@ref(fig:d3-scatterplot), D3 operates at a fairly low level. Compared to typical high-level plotting functionalities such as those provided by base R or `ggplot2` [@r2024; @wickham2016], users must explicitly manage details such as scaling and appending graphical primitives. This hands-on approach extends to interaction as well. While D3 does provide some methods for handling reactive DOM events, it does not provide a built-in system for dispatching and coordinating these events. Instead, it delegates this responsibility to the user, encouraging the integration of reactive Web frameworks such as React [@react2024], Vue [@vue2024], or Svelte [@svelte2024]. Finally, D3.js visualizations are rendered as Scalable Vector Graphics [SVG](SVG) by default. This ensures lossless scaling but can impact performance at high data volumes. While various unofficial alternative rendering engines based on the HTML5 Canvas element or WebGL do exist, there are no official libraries with such functionalities as of this date.
 
 #### Plotly and Highcharts
 
@@ -223,7 +220,7 @@ const data = [{
 Plotly.newPlot('app', data);
 ```
 
-Clearly, compared to the D3 code used to create Figure \@ref(fig:d3-scatterplot), the code for creating Figure \@ref(fig:plotly-scatterplot) is much terser. Many details, such as the axis limits and margins, point size and colour, gridlines, and widgets, are handled implicitly, via default values and automatic inference. Also, note that the figure provides some interactive features by default, such as zooming, panning, and tooltip on hover. Reactivity is handled automatically using systems built on the native DOM Event Target interface [@mdn2024a].
+Clearly, compared to D3, the code used to create Figure \@ref(fig:d3-scatterplot) is much terser. Details such as the axis limits and margins, point size and colour, gridlines, and widgets are all handled implicitly, through defaults and automatic inference. Some interactive features, such as zooming, panning, and tooltips on hover, are provided right out of the box. Finally, reactivity is handled automatically using systems built on the native DOM Event Target interface [@mdn2024a].
 
 Highcharts provides a similar JSON-based interface for specifying plots. While perhaps slightly more flexible than Plotly, it also requires more verbose specifications. Because of the similarity, I will not provide a separate example here [interested reader should look up the package's website, @highcharts2024].
 
@@ -231,11 +228,11 @@ Finally, like D3, both plotly.js and Highcharts also render the graphics in SVG 
 
 #### Vega and Vega-Lite
 
-Vega [@satyanarayan2015; @vega2024a] is another popular interactive data visualization package. Like Plotly and Highcharts, Vega is also partially built upon the foundation of D3 and uses JSON schema for plot specification. However, Vega is more low-level and implements a lot of custom functionality. This allows it to offer more fine-grained customization of graphics and interactive behavior, leading to greater flexibility.
+Vega [@satyanarayan2015; @vega2024a] is another popular interactive data visualization package. Like Plotly and Highcharts, Vega also builds on the foundation of D3 and uses JSON schema for plot specification. However, Vega operates on lower level and implements a lot of custom functionality. This allows for more fine-grained customization of graphics and interactive behavior, resulting in greater flexibility.
 
-However, this added flexibility does come at a cost. Compared to the high-level frameworks like Plotly and Highcharts, Vega is significantly more verbose. For instance, creating a scatterplot matrix with linked selection in Vega requires over 300 lines of JSON specification, not including the data and using default formatting [@vega2024b].
+However, this added flexibility does come at a cost. Compared to the high-level frameworks like Plotly and Highcharts, Vega is significantly more verbose. For instance, creating a scatterplot matrix with linked selection in Vega requires over 300 lines of JSON specification [not including the data and using default formatting, @vega2024b].
 
-Vega-Lite [@satyanarayan2015] attempts to remedy this complexity by providing a high-level interface to Vega. Here's how we can define a scatterplot with zooming, panning, and tooltip on hover in Vega-Lite:
+To address this complexity, Vega-Lite [@satyanarayan2015] provides a high-level interface to Vega. Here's how to define a scatterplot with zooming, panning, and a tooltip on hover in Vega-Lite:
 
 ```{r}
 #| eval: false
@@ -291,21 +288,21 @@ Just for clarity, the R code above corresponds to the following declarative JSON
 };
 ```
 
-Note that the zooming and panning capability is provided by the `params` property, which declaratively specifies a list of plot parameters that can be modified by interaction [see @vegalite2024a]. In the case above, the specification creates a two-way binding between plot scales and mouse selection events [@vegalite2024b].   
+Note that the zooming and panning capability is provided by the `params` property, which declaratively specifies a list of plot parameters that can be modified by interaction, see @vegalite2024a. In the example above, the specification creates a two-way binding between plot scales and mouse selection events [@vegalite2024b].   
 
 #### Common features and limitations of web-based interactive systems
 
-In general, these contemporary web-based interactive data visualization systems offer a great deal of flexibility, making them well-suited to modern data presentation. However, all of this expressiveness does seem to come at a cost. Compared to the earlier statistical graphics systems, described in Section \@ref(early-interactive), many of the more advanced features that used to be common are either missing or require a significant effort to implement, such that they are only accessible to expert users. This is evidenced by their infrequent appearance in documentation and example gallery pages. 
+In general, these contemporary web-based interactive data visualization systems offer a great deal of flexibility, making them well-suited to modern data presentation. However, the expressiveness does seem to come at a cost. Compared to the earlier statistical graphics systems, described in Section \@ref(early-interactive), many of the more advanced features that that were once common are either missing or require considerable effort to implement. This may effectively gatekeep these sophisticated features to expert users, as evidenced by their infrequent appearance in example galleries and documentation.
 
-For instance, the [R Graph Gallery entry on Interactive Charts](https://r-graph-gallery.com/interactive-charts.html) [@holtz2022] features multiple interactive figures implemented in the JavaScript libraries described above. However, all of these examples show only surface-level, single-plot interactive features such zooming, panning, hovering, 3D rotation, and node repositioning. The [Plotly Dash documentation page on Interactive Visualizations](https://dash.plotly.com/interactive-graphing) [@plotly2022] does feature two examples of simple linked cross-filtering, however, the vast majority of visualizations in the [Plotly R Open Source Graphing Library documentation page](https://plotly.com/r/) [@plotly2022] show examples only surface-level interactivity. Similarly, [VegaLite Gallery pages on Interactive Charts](https://vega.github.io/vega-lite/examples/#interactive-charts) [@vegalite2022] feature many examples, however, only a limited number of examples show linked or parametric interactivity (see e.g. [Interactive Multiview Displays](https://vega.github.io/vega-lite/examples/#interactive-multi-view-displays)). Finally, the [Highcharter Showcase Page ](https://jkunst.com/highcharter/articles/showcase.html) [@kunst2022] does not feature any examples of linking.
+To give some examples, the [R Graph Gallery entry on Interactive Charts](https://r-graph-gallery.com/interactive-charts.html) [@holtz2022] features many interactive figures implemented in the JavaScript libraries described above. However, all of the figures show only surface-level, single-plot interactions such zooming, panning, hovering, 3D rotation, and node repositioning. The [Plotly Dash documentation page on Interactive Visualizations](https://dash.plotly.com/interactive-graphing) [@plotly2022] does feature two examples of simple linked selection/cross-filtering, however, the vast majority of visualizations in the [Plotly R Open Source Graphing Library documentation page](https://plotly.com/r/) [@plotly2022] also show examples of only surface-level interactivity. Likewise, [VegaLite Gallery pages on Interactive Charts](https://vega.github.io/vega-lite/examples/#interactive-charts) [@vegalite2022] feature many examples, however, only a limited number of examples show linked or parametric interactivity (see e.g. [Interactive Multiview Displays](https://vega.github.io/vega-lite/examples/#interactive-multi-view-displays)). Finally, the [Highcharter Showcase Page ](https://jkunst.com/highcharter/articles/showcase.html) [@kunst2022] does not feature any examples of linking.
 
-Even when more advanced features such as linking and parametric manipulation are supported, they are often limited in some way. For instance, take the following quote from the website of Crosstalk, a package designed to enable linking between web-based interactive widgets created with the `htmlwidgets` R package [@htmlwidgets2021] or Shiny [@shiny2024]:
+Further, even when the more advanced features such as linking and parametric manipulation are present, they are often supported to only limited degree. For instance, take the following quote from the website of Crosstalk, a package designed to enable linking between web-based interactive widgets created with the `htmlwidgets` R package [@htmlwidgets2021] or Shiny [@shiny2024]:
 
 > "Crosstalk currently only works for linked brushing and filtering of views that show individual data points, not aggregate or summary views (where “observations” is defined as a single row in a data frame). For example, histograms are not supported since each bar represents multiple data points; but scatter plot points each represent a single data point, so they are supported."
 >
 > @crosstalk2025
 
-Of course, with enough effort and programming skill, these web-based visualization systems can still be used to create rich interactive figures with arbitrarily sophisticated features. However, doing so often requires stepping down a level of abstraction and dealing with low-level language primitives, defeating the purpose of using these high-level libraries in the first place. It also creates a barrier to entry for casual users [@keller2024], which may in fact explain why interactive visualizations are nowadays primarily used for data presentation, not data exploration [@batch2017]. Within these frameworks, creating rich interactive visualizations may be a task better suited to dedicated developers working inside large organizations, rather than individual researchers or analysts.
+While, these web-based frameworks *can* be used to developed arbitrarily complex interactive features, doing so can require substantial effort and programming expertise. Specifically, doing so may involve working with low level programming primitives, defeating the purpose of using a high-level library and creating a barrier to entry for casual users [@keller2024].This dynamic may explain why interactive visualizations are now primarily used for data presentation, rather than data exploration [@batch2017]. Within these popular frameworks, creating rich interactive visualizations may be a task better suited for teams of dedicated developers and data scientists working inside large organizations, rather than for individual researchers or analysts.
 
 ## What even is interactive data visualization? {#what-is-interactive-visualization}
 
